--- a/installjava.yml
+++ b/installjava.yml
@@ -2,13 +2,13 @@
 - hosts: mywebservers
   become: yes
   tasks:
-  - name: install java on ubuntu 16 nodes
+  - name: i want to install java on ubuntu 16 nodes
     apt:
       name: "{{myjavaonubuntu}}"
       state: present
     when: ansible_os_family =="Debian"
 
-  - name: install java on redhat8 nodes
+  - name: i want to install java on redhat8 nodes
     yum:
       name: "{{myjavaonredhat}}"
       state: present
